[EME][GStreamer] Fix wrong subsample parsing on r227067 https://bugs.webkit.org/show_bug.cgi?id=185382

Patch by Yacine Bandou <yacine.bandou_ext@softathome.com> on 2018-05-07
Reviewed by Philippe Normand.

The initialization of sampleIndex should be moved outside of the loop.
Without this patch we will have a bad log and the check of the subsample
count will be useless.

* platform/graphics/gstreamer/eme/WebKitClearKeyDecryptorGStreamer.cpp:
(webKitMediaClearKeyDecryptorDecrypt):

Canonical link: https://commits.webkit.org/200849@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231448 268f45cc-cd09-0410-ab3c-d52691b4dbfc